--- a/template_213.html
+++ b/template_213.html
@@ -188,7 +188,7 @@
                 <p>Newletter</p>
                 <input type="text" placeholder="Name">
                 <input type="text" placeholder="Email">
-                <input type="submit" value="Submit">
+                <button>Submit</button>
                 <img src="./hinh/e.PNG" alt="">
             </div>
         </div>
